--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
   ======================================================== -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-85R18P6NHK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-85R18P6NHK');
+</script>
+
 <body>
   <div class="wrap">
 
